[fix] (480) : spacing and margin

--- a/css/style.css
+++ b/css/style.css
@@ -146,4 +146,13 @@ img {
     .why-us .col-right {
         width: 100%;
     }
+    .steps ,    
+    .why-us{ 
+        margin-bottom: 0;
+    }
+
+    .why-us{
+        padding: 3rem 0;
+        background-color: #222;
+    }
 }
